bpo-46344: Fix trace bug in else of try and try-star blocks (GH-30544)